# gtk3-cpp-todolist

./: CMakeLists.txt  README.md  install.sh
src/: sample.cpp
src/services/: todo-service.h
src/types/: models.h
src/views/: dialogs.h  main.h
